--- a/grow-your-garden/src/App.css
+++ b/grow-your-garden/src/App.css
@@ -1,6 +1,13 @@
 .App {
   text-align: center;
 }
+.Timer {
+  display: flex;
+}
+
+input {
+  border: none;
+}
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
@@ -17,17 +24,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
